# midas-journal-727

GaussianFitting2D/: .#itkParametricGaussianImageSource.h  CMakeLists.txt  GaussianFitting2DTest.cxx  itkImageToParametricImageSourceMetric.h  itkImageToParametricImageSourceMetric.txx  itkParametricGaussianImageSource.h  itkParametricGaussianImageSource.txx  itkParametricImageSource.h
